[gd_scene load_steps=8 format=2]

[ext_resource path="res://godot.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://actors/Player.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9, 31.9 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 45, 45 )

[sub_resource type="Animation" id=4]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NameRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = -45.0
margin_right = 32.0
margin_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 0 )
color = Color( 0, 0, 0, 0.376471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="NameRect"]
margin_right = 39.0
margin_bottom = 13.0
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = SubResource( 2 )
text = "Name"
align = 1

[node name="HitBox" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
